--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="main.css">
   <title>Run Code Organization</title>
 </head>
 <body>
-  <section class="splash">
-    <img src="images/oskar-yildiz-gy08FXeM2L4-unsplash.jpg" alt="developers desktop">
-  </section>
+  <main>
+    <header>
+      <img src="images/logo.svg" alt="The Run Code Ninja">
+      <nav>
+        <button>Donate</button>
+      </nav>
+    </header>
+    <section class="splash">
+      <img src="images/oskar-yildiz-gy08FXeM2L4-unsplash.jpg" alt="developers desktop">
+      <h1>We Run your code so you don't have to</h1>
+    </section>  
+    <section class="ninja" >
+      <h3>Get on the leaderboard</h3>
+      <img src="images/ninja_star.svg" alt="">
+      <a href="https://runcode.ninja">Become a Code Ninja</a>
+    </section>
+
+
+
+    <section class="stallions" >
+
+    </section>
+  </main>
 </body>
 </html>
