heading out, quick save

--- a/index.html
+++ b/index.html
@@ -19,18 +19,21 @@
       </nav>
     </header>
     <section class="splash">
+      <img src="images/element5-digital-LTyDj7u_TU4-unsplash.jpg" alt="Leader board">
       <img src="images/oskar-yildiz-gy08FXeM2L4-unsplash.jpg" alt="developers desktop">
       <h1>We Run your code so you don't have to</h1>
     </section>  
     <section class="ninja" >
       <h3>Get on the leaderboard</h3>
       <img src="images/ninja_star.svg" alt="">
-      <a href="https://runcode.ninja">Become a Code Ninja</a>
+      <a href="https://runcode.ninja">Become a Code Ninja &rarr;</a>
     </section>
 
 
 
     <section class="stallions" >
+      <h3>Meet the folks who run the show</h3>
+      <a href="">stallions &rarr;</a>
 
     </section>
   </main>
