added parcel and data

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <meta name="description" content="RunCode Programming Challenges">
 <meta name="author" content="RunCode Ninjas">
 <link rel="shortcut icon" href="images/favicon.ico">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="styles/main.css">
+  <script src="js/index.js"></script>
   <title>Run Code Organization</title>
 </head>
 <body>
@@ -32,9 +33,8 @@
 
 
     <section class="stallions" >
-      <h3>Meet the folks who run the show</h3>
-      <a href="">stallions &rarr;</a>
-
+      <h3>Meet the stalliions</h3>
+      
     </section>
   </main>
 </body>
