starting to work on file and folder structure

--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,9 @@
       <a href="https://runcode.ninja">Become a Code Ninja &rarr;</a>
     </section>
 
-
-
     <section class="stallions" >
-      <h3>Meet the stalliions</h3>
-      
+      <h3>Meet the stallions</h3>
+      <div id="Stallions"></div>
     </section>
   </main>
 </body>
