adding basic styles and reset

--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,20 @@
   <meta name="description" content="RunCode Programming Challenges">
 <meta name="author" content="RunCode Ninjas">
 <link rel="shortcut icon" href="images/favicon.ico">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/main.sass">
   <script src="js/index.js"></script>
   <title>Run Code Organization</title>
 </head>
 <body>
   <main>
-    <header>
-      <img src="images/logo.svg" alt="The Run Code Ninja">
+    <header class="top" >
+      <img class="logo" src="images/logo.svg" alt="The Run Code Ninja">
       <nav>
         <button>Donate</button>
       </nav>
     </header>
     <section class="splash">
-      <img src="images/element5-digital-LTyDj7u_TU4-unsplash.jpg" alt="Leader board">
+      <img id="leaderboard" src="images/element5-digital-LTyDj7u_TU4-unsplash.jpg" alt="Leader board">
       <img src="images/oskar-yildiz-gy08FXeM2L4-unsplash.jpg" alt="developers desktop">
       <h1>We Run your code so you don't have to</h1>
     </section>  
