--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
     </section>
 
     <section class="stallions" >
-      <h3>Meet the stallions</h3>
+      <header>
+        <h3>Meet the stallions</h3>
+      </header>
       <div id="Stallions"></div>
     </section>
   </main>
