still working on it

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,21 @@
     <header class="top" >
       <img class="logo" src="images/logo.svg" alt="The Run Code Ninja">
       <nav>
-        <button>Donate</button>
+        <h2>Run Code</h2>
+        <button><a href="https://www.paypal.me/runcode">Donate</a></button>
       </nav>
     </header>
+
     <section class="splash">
       <img src="images/oskar-yildiz-gy08FXeM2L4-unsplash.jpg" alt="developers desktop">
       <h1>We Run your code so you don't have to</h1>
     </section>  
+
+    <section class="philosophy" >
+      <img src="./images/absurd-idea.png" alt="">
+      <h3>The best way to become a better programmer is to slap keys and yell at screens (some call it coding). We created RunCode to challenge programmers at all experience levels to compete in a fun and safe environment.</h3>
+    </section>
+
     <section class="ninja" >
       <h3>Get on the leaderboard</h3> 
       <a href="https://runcode.ninja">
