--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,14 @@
       <img class="logo" src="images/logo.svg" alt="The Run Code Ninja">
       <nav>
         <h2>Run Code</h2>
-        <button><a href="https://www.paypal.me/runcode">Donate</a></button>
+        <button><a href="https://www.paypal.me/runcode">
+          <img src="images/donate.svg" alt=""> Donate</a></button>
       </nav>
     </header>
 
     <section class="splash">
       <img src="images/oskar-yildiz-gy08FXeM2L4-unsplash.jpg" alt="developers desktop">
-      <h1>We Run your code so you don't have to</h1>
+      <h1>We run your code so you don't have to</h1>
     </section>  
 
     <section class="philosophy" >
